style.css
body{
    background: linear-gradient(to bottom, #f7a0b8, #fbb6c4, #fae9d7, #faf5ec);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    margin: 0;
}

button img{
    width: 800px;
    height: 800px;
}

img.migu-img{
    height:125px;
    width: 125px;
}

img.elgato{
    height: 500px;
    width: 500px;
}

img.designTopleft{
    position: fixed;
    top: 50px;
    left: 1100px;
}
img.designTopright{
    position: fixed;
    top: 50px;
    right: 1150px;
    transform: scaleX(-1);
}

.design-left {
    margin: 10px;
    position: fixed;
    top: 50%;
    bottom: 10px;
    transform: translateY(-50%);
    left: 750px;
    height: 750px;
    width: 700px;
    object-fit: contain;
    rotate: -25deg;
}

.design-right {
    position: fixed;
    top: 50%;
    transform: translateY(-50%);
    right: 750px;
    height: 750px;
    width: 700px;
    object-fit: contain;
    rotate: 25deg;
}

@media (max-width: 768px) {
    .design-left {
        width: 50px;
        left: 0;
    }

    .design-right {
        width: 50px;
        right: 0;
    }
}

h1{
    font-size: 90px;
    font-family: "Leckerli One", cursive;
    color: white;
    text-shadow: 7px 7px 14px rgba(0, 0, 0, 1);
    -webkit-text-stroke: 14px black;
    paint-order: stroke fill;
    margin: 0;
    padding: 5px;
}

h1.birthday-greeting{
    font-size: 50px;
    font-family: "Leckerli One", cursive;
    color: white;
    text-shadow: 7px 7px 14px rgba(0, 0, 0, 1);
    -webkit-text-stroke: 14px black;
    paint-order: stroke fill;
    margin: 0;
    padding: 5px;
}

h2{
    font-size:35px;
    font-family: "Leckerli One", cursive;
    color: black;
    -webkit-text-stroke: 2.5px #ffffff;
    paint-order: stroke fill;
    padding-top: 15px;
}

button{
    background: transparent;
    border: transparent;
    cursor: pointer; 
}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding-left: 50px;
    padding-right: 50px;
}

button:hover img{
    animation: bounce 0.5s;
} 

@keyframes bounce {
    0%   { transform: scale(1); }
    50%  { transform: scale(1.1); }
    100% { transform: scale(1); }
}

.confetti-piece {
    position: fixed;
    width: 10px;
    height: 10px;
    top: -10px;
    border-radius: 2px;
    animation: fall linear forwards;
}

@keyframes fall {
    to {
        transform: translateY(100vh) rotate(360deg);
        opacity: 0;
    }
}

